--- a/Pages/Login.css
+++ b/Pages/Login.css
@@ -2,11 +2,19 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Manrope", serif;
-    background-color: #b4e197;
+    background-color: #a0d87b;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+.Pagetitle{
+    position:absolute; 
+    top: 20px; 
+    left: 20px; 
+    font-size: 65px;
+    font-weight: bold;
+    padding-left: 30px;
 }
 
 .login-container {
