--- a/Pages/Create.css
+++ b/Pages/Create.css
@@ -4,11 +4,25 @@ body {
     margin: 0;
     padding: 20px;
 }
-
+.NavBar{
+    text-align: center; 
+    padding: 10px; 
+    background-color: #fff; 
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    
+}
+.NavPages{
+    margin: 0 15px; 
+    color: gray; 
+    text-decoration: none; 
+    font-size: 21px;
+}
 .container {
     display: flex;
     gap: 20px;
     justify-content: center;
+    margin-top: 80px;
+    margin-bottom: 40px;
 }
 .container label{
     color:white; 
@@ -52,7 +66,7 @@ input, textarea, select {
     cursor: pointer;
     width: 100%;
     margin-top: 10px;
-    color:white; 
+    color:#696363; 
 }
 .UploadImg{
     margin-left: 40px;
@@ -80,6 +94,7 @@ input, textarea, select {
     justify-content: space-between;
     flex-wrap: wrap;
     color: #1F1F1F;
+    margin-top: 253px;
 }
 .footer div {
     flex: 1;
