--- a/Pages/Home.css
+++ b/Pages/Home.css
@@ -4,15 +4,26 @@ body {
     margin: 0;
     padding: 20px;
 }
+.NavBar{
+    text-align: center; 
+    padding: 10px; 
+    background-color: #fff; 
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    
+}
+.NavPages{
+    margin: 0 15px; 
+    color: gray; 
+    text-decoration: none; 
+    font-size: 21px;
+}
 .example-btn2{
-    display: inline-block;
-    background-color:#52b25e;
-    color: #ffffff;
-    padding: 11px 32px;
-    text-align: center;
-    font-size: 16px;
-    font-family: "Manrope", serif;
-    opacity: 0.9;
+    background: #d7f7b6;
+    border: none;
+    padding: 18px 33px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
 }
 .mostviewed {
     display: flex;
@@ -22,6 +33,7 @@ body {
     color: rgb(0, 0, 0);
     font-family: "Manrope", serif;
     padding: 20px;
+    background-color:#9BD976;
 }
 
 .mostviewed-div {
@@ -29,6 +41,7 @@ body {
     text-align: left;
     margin-left: 30px;
     margin-right: 30px;
+    font-size: 26px;
 }
 
 .mostviewed-img {
@@ -38,6 +51,7 @@ body {
     align-items: center;
     gap: 20px;
     margin-top: 30px;
+    font-size: 25px;
 }
 
 .table-container {
@@ -76,7 +90,7 @@ body {
 .heading{
 font-family: "Manrope", serif;
 color: black; 
-padding-top: 10%;
+padding-top: 5%;
 font-size: 35px;
  
 }
