--- a/Pages/Item.css
+++ b/Pages/Item.css
@@ -4,6 +4,19 @@ body {
     margin: 0;
     padding: 20px;
 }
+.NavBar{
+    text-align: center; 
+    padding: 10px; 
+    background-color: #fff; 
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    
+}
+.NavPages{
+    margin: 0 15px; 
+    color: gray; 
+    text-decoration: none; 
+    font-size: 21px;
+}
 .heading{
     font-family: "Manrope", serif;
     color: black; 
@@ -36,7 +49,7 @@ display: inline;
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 10%;
+    margin-bottom: 4%;
     justify-content: center;
     margin-top: 150px;
 }
