--- a/Pages/AllTrades.css
+++ b/Pages/AllTrades.css
@@ -25,57 +25,22 @@ body {
 .subtitle {
   font-size: 25px;
 }
-.profile-card {
-  background: #a4d37f;
-  padding: 20px;
-  border-radius: 20px;
-  text-align: center;
-  width: 250px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-.profile-img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 3px solid white;
-}
-.name {
-  font-size: 18px;
-  font-weight: bold;
-  margin-top: 10px;
-}
-.username {
-  color: #555;
-  font-size: 14px;
-  margin-bottom: 5px;
-}
-.level {
-  font-size: 12px;
-  color: #777;
-  margin-bottom: 10px;
-}
-.stats {
-  font-size: 14px;
-  margin: 5px 0;
-}
-.stars {
-  color: gold;
-  font-size: 16px;
-}
-.rating {
-  font-size: 14px;
-  font-weight: bold;
-}
-.btn {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 8px 15px;
-  background: black;
-  color: white;
-  text-decoration: none;
+.example-btn2 {
+  background: #9bd976;
+  border: none;
+  padding: 18px 33px;
   border-radius: 5px;
-  font-size: 14px;
+  cursor: pointer;
+  font-size: 20px;
+  text-align: right;
+  margin: 20px;
+}
+.AllTrades input {
+  width: 50%;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font-size: 17px;
 }
 .card-container {
   display: flex;
@@ -107,23 +72,6 @@ body {
 }
 .card p {
   color: #484646;
-}
-.example-btn2 {
-  background: #9bd976;
-  border: none;
-  padding: 18px 33px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 20px;
-  text-align: right;
-  margin: 20px;
-}
-.YourProfile input {
-  width: 50%;
-  padding: 15px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  font-size: 17px;
 }
 .footer {
   background-color: #a1d88b;
