--- a/Pages/Home.css
+++ b/Pages/Home.css
@@ -1,226 +1,222 @@
 body {
-    font-family: "Manrope", sans-serif;
-    background-color: #f9f9f9;
-    margin: 0;
-    padding: 20px;
+  font-family: "Manrope", sans-serif;
+  background-color: #f9f9f9;
+  margin: 0;
+  padding: 20px;
 }
-.NavBar{
-    text-align: center; 
-    padding: 10px; 
-    background-color: #fff; 
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    
+.NavBar {
+  text-align: center;
+  padding: 10px;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
-.NavPages{
-    margin: 0 15px; 
-    color: gray; 
-    text-decoration: none; 
-    font-size: 21px;
+.NavPages {
+  margin: 0 15px;
+  color: gray;
+  text-decoration: none;
+  font-size: 21px;
 }
-.example-btn2{
-    background: #d7f7b6;
-    border: none;
-    padding: 18px 33px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 20px;
+.example-btn2 {
+  background: #d7f7b6;
+  border: none;
+  padding: 18px 33px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
 }
 .mostviewed {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-    color: rgb(0, 0, 0);
-    font-family: "Manrope", serif;
-    padding: 20px;
-    background-color:#9BD976;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  color: rgb(0, 0, 0);
+  font-family: "Manrope", serif;
+  padding: 20px;
+  background-color: #9bd976;
 }
 
 .mostviewed-div {
-    flex: 30%;
-    text-align: left;
-    margin-left: 30px;
-    margin-right: 30px;
-    font-size: 26px;
+  flex: 30%;
+  text-align: left;
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: 26px;
 }
 
 .mostviewed-img {
-    display: flex;
-    flex-direction: row;
-    flex: 70%;
-    align-items: center;
-    gap: 20px;
-    margin-top: 30px;
-    font-size: 25px;
+  display: flex;
+  flex-direction: row;
+  flex: 70%;
+  align-items: center;
+  gap: 20px;
+  margin-top: 30px;
+  font-size: 25px;
 }
 
 .table-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .table {
-    max-width: 80%;
-    height: auto;
+  max-width: 80%;
+  height: auto;
 }
 
 .mostviewed ul {
-    list-style: none;
-    padding: 0;
-    margin-top: 10px;
+  list-style: none;
+  padding: 0;
+  margin-top: 10px;
 }
-.col{
-    flex: 0 0 33%; 
-    margin-bottom: 3%;
-    }
+.col {
+  flex: 0 0 33%;
+  margin-bottom: 3%;
+}
 
 .links {
-    text-decoration: underline;
-    cursor: pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
-.solutions{
-    position: relative;
-    text-align: center;
-    color: black; 
-    margin-bottom: 11%;
-    margin-top: -6%; 
+.solutions {
+  position: relative;
+  text-align: center;
+  color: black;
+  margin-bottom: 11%;
+  margin-top: -6%;
 }
-.heading{
-font-family: "Manrope", serif;
-color: black; 
-padding-top: 5%;
-font-size: 35px;
- 
+.heading {
+  font-family: "Manrope", serif;
+  color: black;
+  padding-top: 5%;
+  font-size: 35px;
 }
-.subtitle{
-    font-size: 25px;
+.subtitle {
+  font-size: 25px;
 }
-.SolImg{
-    font-family: "Manrope", serif;
-    color: black;
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10%;
-    justify-content: center;
+.SolImg {
+  font-family: "Manrope", serif;
+  color: black;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10%;
+  justify-content: center;
 }
-.city{
-    font-size: 24px;
-    font-weight: bold;
-
+.city {
+  font-size: 24px;
+  font-weight: bold;
 }
-.date{
-    font-size: 18px;
+.date {
+  font-size: 18px;
 }
-.sol-btn{
-    display: inline-block;
-    background-color: #52b25e;
-    color:#ffffff; 
-    padding:14px 25px; 
-    text-align:center; 
-    font-size: 16px;
-    font-family: "Manrope", serif; 
-    margin-left: 20px;
-    opacity: 0.9;
-    width: 108px;
-    margin-top: 10px;
+.sol-btn {
+  display: inline-block;
+  background-color: #52b25e;
+  color: #ffffff;
+  padding: 14px 25px;
+  text-align: center;
+  font-size: 16px;
+  font-family: "Manrope", serif;
+  margin-left: 20px;
+  opacity: 0.9;
+  width: 108px;
+  margin-top: 10px;
 }
-ul{
-    display:flex; 
-    flex-wrap: wrap; 
-    flex-direction: column; 
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:10%; 
-    }
-    li{
-    flex: 0 0 20%;
-    display: inline;
-    }
-    .companies{
-        background-color: #9BD976;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 40px;
-        }
-        .title{
-            font-family: "Manrope", serif;
-            color: black;
-            padding-top: 25px;
-            font-size: 35px;
-        
-        }
-        .CompanieName{
-        font-family: "Manrope", serif;
-        color: white; 
-        }
-        .CompImg{
-        font-family: "Manrope", serif;
-        color: white; 
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 1600px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10%;
-        justify-content: center;
-        
-        }
-        .contact-form {
-            background-color: #A1D88B;
-            width: 50%;
-            margin: 50px auto;
-            padding: 20px;
-            border-radius: 15px;
-        }
-        .contact-form label {
-            font-weight: bold;
-            display: block;
-            margin-top: 10px;
-        }
-        .contact-form input, 
-        .contact-form textarea {
-            width: 95%;
-            padding: 10px;
-            border-radius: 20px;
-            border: none;
-            margin-top: 5px;
-        }
-        .contact-form button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 20px;
-            border-radius: 20px;
-            border: none;
-            background-color: #90D270;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        .footer {
-            background-color: #A1D88B;
-            padding: 20px;
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            color: #1F1F1F;
-        }
-        .footer div {
-            flex: 1;
-            min-width: 200px;
-            margin: 10px;
-        }
-        .footer h3 {
-            font-size: 16px;
-            font-weight: bold;
-        }
-        .footer p, .footer a {
-            color: #333;
-            text-decoration: none;
-            margin: 5px 0;
-            display: block;
-        }
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+}
+li {
+  flex: 0 0 20%;
+  display: inline;
+}
+.companies {
+  background-color: #9bd976;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 40px;
+}
+.title {
+  font-family: "Manrope", serif;
+  color: black;
+  padding-top: 25px;
+  font-size: 35px;
+}
+.CompanieName {
+  font-family: "Manrope", serif;
+  color: white;
+}
+.CompImg {
+  font-family: "Manrope", serif;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10%;
+  justify-content: center;
+}
+.contact-form {
+  background-color: #a1d88b;
+  width: 50%;
+  margin: 50px auto;
+  padding: 20px;
+  border-radius: 15px;
+}
+.contact-form label {
+  font-weight: bold;
+  display: block;
+  margin-top: 10px;
+}
+.contact-form input,
+.contact-form textarea {
+  width: 95%;
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
+  margin-top: 5px;
+}
+.contact-form button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 20px;
+  border: none;
+  background-color: #90d270;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+.footer {
+  background-color: #a1d88b;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  color: #1f1f1f;
+}
+.footer div {
+  flex: 1;
+  min-width: 200px;
+  margin: 10px;
+}
+.footer h3 {
+  font-size: 16px;
+  font-weight: bold;
+}
+.footer p,
+.footer a {
+  color: #333;
+  text-decoration: none;
+  margin: 5px 0;
+  display: block;
+}
