--- a/Pages/AllTrades.css
+++ b/Pages/AllTrades.css
@@ -35,6 +35,10 @@ body {
   text-align: right;
   margin: 20px;
 }
+.AllTradesbutton {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
 .AllTrades input {
   width: 50%;
   padding: 15px;
