--- a/Pages/Home.css
+++ b/Pages/Home.css
@@ -144,6 +144,7 @@ li {
   display: flex;
   flex-direction: column;
   padding-bottom: 40px;
+  background-image: linear-gradient(180deg, #d7f7b6, #9bd976);
 }
 .title {
   font-family: "Manrope", serif;
