--- a/Pages/Create.css
+++ b/Pages/Create.css
@@ -118,3 +118,37 @@ select {
   margin: 5px 0;
   display: block;
 }
+a:hover {
+  color: black;
+  font-weight: bold;
+}
+
+.image-upload {
+  display: flex;
+  gap: 10px;
+}
+
+.image-box {
+  width: 80px;
+  height: 80px;
+  border: 2px dashed #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  cursor: pointer;
+  position: relative;
+}
+
+.image-preview {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hidden-input {
+  display: none;
+}
