--- a/Pages/Home.css
+++ b/Pages/Home.css
@@ -4,6 +4,10 @@ body {
   margin: 0;
   padding: 20px;
 }
+a:hover {
+  color: black; /* Hover-Effekt */
+  font-weight: bold; /* Fettgedruckt bei Hover */
+}
 .NavBar {
   text-align: center;
   padding: 10px;
@@ -16,6 +20,7 @@ body {
   text-decoration: none;
   font-size: 21px;
 }
+
 .example-btn2 {
   background: #d7f7b6;
   border: none;
