--- a/Pages/Create.css
+++ b/Pages/Create.css
@@ -7,14 +7,19 @@ body {
 .NavBar {
   text-align: center;
   padding: 10px;
-  background-color: #fff;
+  background-color: #9bcc7b;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 .NavPages {
   margin: 0 15px;
-  color: gray;
+  color: #0f4f04;
   text-decoration: none;
   font-size: 21px;
+}
+.NavLogo {
+  height: 40px;
+  vertical-align: middle;
+  display: inline-block;
 }
 .CreateTrades {
   padding-top: 5%;
@@ -100,7 +105,7 @@ select {
   justify-content: space-between;
   flex-wrap: wrap;
   color: #1f1f1f;
-  margin-top: 253px;
+  color: #0f4f04;
 }
 .footer div {
   flex: 1;
