--- a/Pages/Swipe.css
+++ b/Pages/Swipe.css
@@ -5,20 +5,25 @@ body {
   padding: 20px;
 }
 a:hover {
-  color: black; /* Hover-Effekt */
-  font-weight: bold; /* Fettgedruckt bei Hover */
+  color: black;
+  font-weight: bold;
 }
 .NavBar {
   text-align: center;
   padding: 10px;
-  background-color: #fff;
+  background-color: #9bcc7b;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 .NavPages {
   margin: 0 15px;
-  color: gray;
+  color: #0f4f04;
   text-decoration: none;
   font-size: 21px;
+}
+.NavLogo {
+  height: 40px;
+  vertical-align: middle;
+  display: inline-block;
 }
 .heading {
   font-family: "Manrope", serif;
@@ -90,7 +95,7 @@ a:hover {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  color: #1f1f1f;
+  color: #0f4f04;
 }
 .footer div {
   flex: 1;
