finished the allpages function

--- a/Pages/Item.css
+++ b/Pages/Item.css
@@ -24,6 +24,11 @@ body {
     font-size: 35px;
      
     }
+.pictures{
+    max-width: 105%;
+    height: auto;
+}
+
 .col{
 flex: 0 0 33%; 
 margin-bottom: 3%;
