--- a/Pages/Match.css
+++ b/Pages/Match.css
@@ -43,9 +43,13 @@ body {
   border-radius: 10px;
   width: 48%;
   margin-bottom: 40px;
+  font-size: 20px; 
 }
 .input-group {
   margin-bottom: 10px;
+}
+.title {
+  font-size: 25px; 
 }
 .input-group input {
   width: 96%;
